updated join group